syntax = "proto3";

package plan;
//import "order-service/proto/order/order.proto";
import "github.com/asciiu/gomo/plan-service/proto/order/order.proto";

service PlanService {
  rpc NewPlan(NewPlanRequest) returns (PlanResponse) {}
  rpc GetUserPlan(GetUserPlanRequest) returns (PlanResponse) {}
  rpc GetUserPlans(GetUserPlansRequest) returns (PlansPageResponse) {}
  rpc DeletePlan(DeletePlanRequest) returns (PlanResponse) {}
  rpc UpdatePlan(UpdatePlanRequest) returns (PlanResponse) {}
}

// Requests
message NewPlanRequest {
  string userID = 1;
  string title = 2;
  string planTemplateID = 3;
  string status = 4;
  bool closeOnComplete = 5;
  repeated order.NewOrderRequest orders = 6; 
}

message UpdatePlanRequest {
  string planID = 1;
  string userID = 2;
  string title = 3;
  string planTemplateID = 4;
  string status = 5;
  bool closeOnComplete = 6;
  repeated order.NewOrderRequest orders = 7; 
}


message GetUserPlanRequest {
  string planID = 1;
  string userID = 2;
  uint32 planDepth = 3;
  uint32 planLength = 4;
}

message GetUserPlansRequest {
    string userID = 1;
    string exchange = 2; 
    string marketName = 3;
    string status = 4;
    uint32 page = 5;
    uint32 pageSize = 6;
}

message DeletePlanRequest {
  string planID = 1;
  string userID = 2;
}

// Responses
message Plan {
  string planID = 1;
  string planTemplateID = 2;
  string userID = 3;
  uint32 lastExecutedPlanDepth = 8;
  string lastExecutedOrderID = 9;
  string exchange = 10;
  string marketName = 11;
  string activeCurrencySymbol = 12;
  double activeCurrencyBalance = 13;
  uint64 userPlanNumber = 14;
  string status = 15;
  bool closeOnComplete = 16;
  string createdOn = 17;
  string updatedOn = 18;
  string title = 19;
  repeated order.Order orders = 20; 
}

message PlanData {
  Plan plan = 1;
}

message PlanResponse {
  string status = 1;
  string message = 2;
  PlanData data = 3;
}

message PlansPageResponse {
  string status = 1;
  string message = 2;
  PlansPage data = 3;
}

message PlansPage {
  uint32 page = 1;
  uint32 pageSize = 2; 
  uint32 total = 3;
  repeated Plan plans = 4; 
}